aws/local_state/main-security-groups.tf
resource "aws_security_group" "Securitygroup-1" {
  name        = "Securitygroup-1"
  description = "Allow HTTP and SSH"
  vpc_id      = aws_vpc.main.id  # Make sure you have a VPC created

  ingress {
    description = "Allow HTTP"
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    description = "Allow SSH"
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    description = "Allow all outbound traffic"
    from_port   = 0
    to_port     = 0
    protocol    = "-1"  # -1 means all protocols
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name = "Securitygroup-1"
  }
}
